--- a/public/admin-static/index.html
+++ b/public/admin-static/index.html
@@ -15,8 +15,12 @@
   <script src="https://unpkg.com/decap-cms@3.1.1/dist/decap-cms.js"></script>
   
   <script>
+    // Redirect van netlify.app naar kwslinkhout.be (voor invites/confirmations)
+    if (window.location.host === 'kws-linkhout.netlify.app') {
+      window.location.href = 'https://kwslinkhout.be/admin/' + window.location.hash;
+    }
+    
     // Initialiseer Netlify Identity
-    // We gebruiken de proxy via kwslinkhout.be -> kws-linkhout.netlify.app
     if (window.netlifyIdentity) {
       window.netlifyIdentity.init({
         APIUrl: "/.netlify/identity"
