--- a/public/admin-static/index.html
+++ b/public/admin-static/index.html
@@ -10,5 +10,12 @@
   
   <!-- Decap CMS -->
   <script src="https://unpkg.com/decap-cms@3.1.1/dist/decap-cms.js"></script>
+  
+  <script>
+    // Initialize CMS with explicit config path
+    CMS.init({
+      config: '/admin-static/config.yml'
+    });
+  </script>
 </body>
 </html>
